Fix what I broke, and futz with styles, look at all these new pages

--- a/src/about.html
+++ b/src/about.html
@@ -1,5 +1,5 @@
 ---
-title: Miriam's build-a-bio workshop
+title: Miriam's build-a-bio workshop (fun)
 sub: >
   ~~My~~ Her least favorite page
 summary: >
@@ -9,8 +9,7 @@ summary: >
   but regrets that as an aesthetic choice.
 bios:
   intro: >
-    Miriam is a hybrid artist
-    and web developer
+    Miriam is a hybrid media artist
     based in Denver, CO.
   orgs: >
     She makes web things with [OddBird](https://oddbird.net),
