--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@ eleventyImport:
   collections: [is:post, is:channel, is:org]
 ---
 
-<h2>Writing (here)</h2>
+<h2>Articles &c.</h2>
 <post-list
   :@posts="$data.collections['is:post']"
   :@only-show="['featured', 'recent']"
